--- a/cybreX site/templates/document.html
+++ b/cybreX site/templates/document.html
@@ -23,29 +23,11 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">Logo</a></li>
+									<li><a href="index.html">Logo</a></li>
 									<li><a href="index.html">Home</a></li>
-									<li>
-										<a href="about.html">About</a>
-										<ul>
-											<li><a href="#">Mission and Vision</a></li>
-											<li>
-												<a href="#">Services</a>
-												<ul>
-													<li><a href="#">CybreX API</a></li>
-													<li><a href="#">SaaS</a></li>
-													<li><a href="#">Mobile Apps</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Clients</a></li>
-											<li><a href="#">The Team</a></li>
-										</ul>
-									</li>
-									<li><a href="contact.html">Contact Us</a></li>
-									<li><a href="document.html">Documentation</a></li>
+									<li class="current"><a href="document.html">Documentation</a></li>
 								</ul>
 							</nav>
-	
 					</div>
 	
 			<!-- Main -->
@@ -53,36 +35,6 @@
 					<div class="container">
 						<div class="row gtr-200">
 							<div class="col-4 col-12-narrower">
-								<div id="sidebar">
-
-									<!-- Sidebar -->
-
-										<!-- <section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
-										</section> -->
-
-										<section>
-											<h3>Content</h3>
-											<ul class="links">
-												<li><a href="#">Introduction</a></li>
-												<li><a href="#">Reference</a></li>
-												<li><a href="#">Semper mod quis eget mi dolore</a></li>
-												<li><a href="#">Consequat etiam lorem phasellus</a></li>
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Online Testing</a></li>
-											</ul>
-											<footer>
-												<a href="#" class="button">More Random Links</a>
-											</footer>
-										</section>
-
-								</div>
 							</div>
 							<div class="col-8  col-12-narrower imp-narrower">
 								<div id="content">
@@ -128,50 +80,20 @@
 
 			<!-- Footer -->
 				<div id="footer">
-					<div class="container">
-							<section class="col-12 col-12-narrower">
-								<h3>Test Your SMS</h3>
-								<!-- @todo - message -->
-								<form action="/submit" method="POST">
-									<div class="row gtr-50">
-										<div class="col-6 col-12-mobilep">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="col-6 col-12-mobilep">
-											<input type="password" name="pwd" id="password" placeholder="Password" />
-										</div>
-										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Predict" /></li>
-												<!-- <li><input type="submit" class="button alt" value="Submit SMS" /></li> -->
-											</ul>
-										</div>
-									</div>
-								</form>
-							</section>
-					</div>
-
 					<!-- Icons -->
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
 						</ul>
-
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
 								<li>&copy; CybreX. All rights reserved</li><li>Design: <a href="http://html5up.net">CybreX</a></li>
 							</ul>
 						</div>
-
 				</div>
-
 		</div>
 
 		<!-- Scripts -->
@@ -181,6 +103,5 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
