--- a/cybreX site/templates/index.html
+++ b/cybreX site/templates/index.html
@@ -35,7 +35,7 @@
 				<section id="banner">
 					<header>
 						<h2>CybreX API: <i>The reliable Machine Learning partner for secured SMS services </i></h2>
-						<a href="document.html" class="button btn-sm">Get the API</a>
+						<a href="document.html" class="button btn-sm">Test the API</a>
 					</header>
 				</section>
 
@@ -46,22 +46,22 @@
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-paper-plane"></i>
-									<h3>This Is Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<h3>About</h3>
+									<p>This project idea was presented <!--[by a team of two]--> during the National AI Training Prgoram organised by the Ministry of Communication and Ghana Tech Lab.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-pencil-alt"></i>
-									<h3>Also Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<h3>Tools</h3>
+									<p>Machine learning tools and skills applied include: Python libraries such as NLTK and Flask; Web development basics such as HTML, CSS, JavaScript</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-wrench"></i>
-									<h3>Probably Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<h3>Outcome</h3>
+									<p>The project successfully predicts text as spam or ham; and was awarded a grant to take part in the incubation stage of the training program.</p>
 								</div>
 							</section>
 						</div>
