--- a/cybreX site/templates/index.html
+++ b/cybreX site/templates/index.html
@@ -9,7 +9,8 @@
 		<title>CybreX</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../static/css/main.css" />
+		<!-- <link rel="stylesheet" href="../static/css/main.css" /> -->
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -84,7 +85,7 @@
 						<section class="col-12 col-12-narrower">
 							<h3>Test Your SMS</h3>
 							<!-- @todo - message -->
-							<form action="/submit" method="POST">
+							<form action="{{ url_for('predict')}}" method="POST">
 								<div class="row gtr-50">
 									<div class="col-6 col-12-mobilep">
 										<input type="email" name="email" id="email" placeholder="Email" />
