Edited tools for development

--- a/cybreX site/templates/index.html
+++ b/cybreX site/templates/index.html
@@ -37,7 +37,7 @@
 					<div class="box highlight">
 						<i class="icon solid major fa-pencil-alt"></i>
 						<h3>Tools</h3>
-						<p>Machine learning tools and skills applied include: Python libraries such as NLTK and Flask; Web development basics such as HTML, CSS, JavaScript</p>
+						<p>Machine learning tools and skills applied include: Python libraries such as NLTK and Flask; Web development basics such as HTML, CSS.</p>
 					</div>
 				</section>
 				<section class="col-4 col-12-narrower">
