--- a/cybreX site/templates/index.html
+++ b/cybreX site/templates/index.html
@@ -13,27 +13,36 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 	</head>
 	<body class="is-preload">
-	<div id="page-wrapper">
-	<!-- Header -->
-	<!-- Banner -->
-	<section id="banner">
-		<header>
-			<h2>CybreX API: <i>The reliable Machine Learning partner for secured SMS services </i></h2>
-			<a href="document.html" class="button btn-sm">Test the API</a>
-		</header>
-	</section>
-	<!-- Highlights -->
-	<section class="wrapper style1">
-		<div class="container">
-			<div class="row gtr-200">
-				<section class="col-4 col-12-narrower">
-					<div class="box highlight">
-						<i class="icon solid major fa-paper-plane"></i>
-						<h3>About</h3>
-						<p>This project idea was presented <!--[by a team of two]--> during the National AI Training Prgoram organised by the Ministry of Communication and Ghana Tech Lab.</p>
-					</div>
-				</section>
-				<section class="col-4 col-12-narrower">
+		<div id="page-wrapper">
+			<div>
+				<!-- Nav -->
+				<nav id="nav">
+					<ul>
+						<li class="current"><a href="index.html">Logo</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="document.html">Documentation</a></li>
+					</ul>
+				</nav>
+			</div>
+			<!-- Banner -->
+			 <section id="banner">
+				<header>
+					<h2>CybreX API: <i>The reliable Machine Learning partner for secured SMS services </i></h2>
+					<a href="document.html" class="button btn-sm">Test the API</a>
+				</header>
+			</section>
+			<!-- Highlights -->
+			<section class="wrapper style1">
+				<div class="container">
+					<div class="row gtr-200">
+						<section class="col-4 col-12-narrower">
+							<div class="box highlight">
+								<i class="icon solid major fa-paper-plane"></i>
+								<h3>About</h3>
+								<p>This project idea was presented <!--[by a team of two]--> during the National AI Training Prgoram organised by the Ministry of Communication and Ghana Tech Lab.</p>
+							</div>
+						</section>
+						<section class="col-4 col-12-narrower">
 					<div class="box highlight">
 						<i class="icon solid major fa-pencil-alt"></i>
 						<h3>Tools</h3>
