Close internal links

--- a/cybreX site/templates/index.html
+++ b/cybreX site/templates/index.html
@@ -28,7 +28,7 @@
 			 <section id="banner">
 				<header>
 					<h2>CybreX API: <i>The reliable Machine Learning partner for secured SMS services </i></h2>
-					<a href="document.html" class="button btn-sm">Test the API</a>
+					<a href="#" class="button btn-sm">Test the API</a>
 				</header>
 			</section>
 			<!-- Highlights -->
@@ -64,7 +64,7 @@
 		<div class="container">
 			<header>
 				<h2>Are you ready to secure your SMS services?</h2>
-				<a href="document.html" class="button">Get Started</a>
+				<a href="#" class="button">Get Started</a>
 			</header>
 		</div>
 	</section>
