--- a/static/css/style.css
+++ b/static/css/style.css
@@ -395,6 +395,7 @@ section h3.section-subheading {
     display:inline;
     font-size: 35px;
     color: #112e48;
+    padding-bottom: 0%;
 }
 
 hr {
